[gd_scene load_steps=11 format=2]

[ext_resource path="res://Texture/TopBarUiGrdt.tres" type="Texture" id=1]
[ext_resource path="res://Texture/MenuBttnNrmBoxTxtre.tres" type="StyleBox" id=2]
[ext_resource path="res://Script/SrtMenuUi.gd" type="Script" id=3]
[ext_resource path="res://AvenirLTStd-Black.otf" type="DynamicFontData" id=4]
[ext_resource path="res://Texture/MenuBttnPresBoxTxtre.tres" type="StyleBox" id=5]
[ext_resource path="res://Scene/ScnBrownBckgrd.tscn" type="PackedScene" id=6]

[sub_resource type="Animation" id=4]
resource_name = "Close"
length = 0.166667
step = 0.0166667
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( -202, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("BarUi/TopBar:texture:height")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.05, 0.166667 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 48, 600 ]
}

[sub_resource type="Animation" id=5]
resource_name = "Open"
length = 0.166667
step = 0.0166667
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.116667, 0.166667 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -202, 0 ), Vector2( -202, 0 ), Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("BarUi/TopBar:texture:height")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.116667 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 600, 48 ]
}

[sub_resource type="Animation" id=6]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("BarUi/TopBar:texture:height")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 48 ]
}

[sub_resource type="DynamicFont" id=1]
size = 40
font_data = ExtResource( 4 )

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 5120.0
margin_bottom = 3000.0
script = ExtResource( 3 )
ButtonAmount = [ "", "" ]
ButtonName = [ "", "" ]

[node name="AnimPlayer" type="AnimationPlayer" parent="."]
anims/Close = SubResource( 4 )
anims/Open = SubResource( 5 )
anims/RESET = SubResource( 6 )

[node name="BrownBckgrd" parent="." instance=ExtResource( 6 )]

[node name="BarUi" type="MarginContainer" parent="."]
margin_right = 40.0
margin_bottom = 40.0
rect_min_size = Vector2( 250, 600 )

[node name="Layer" type="VBoxContainer" parent="BarUi"]
margin_right = 250.0
margin_bottom = 600.0

[node name="Gap" type="MarginContainer" parent="BarUi/Layer"]
margin_right = 250.0
margin_bottom = 48.0
rect_min_size = Vector2( 0, 48 )

[node name="TopBar" type="TextureRect" parent="BarUi"]
margin_right = 250.0
margin_bottom = 48.0
size_flags_horizontal = 0
size_flags_vertical = 0
texture = ExtResource( 1 )

[node name="LogoN" type="Button" parent="BarUi/TopBar"]
margin_left = 10.0
margin_top = 4.0
margin_right = 193.0
margin_bottom = 51.0
focus_mode = 0
custom_colors/font_color_disabled = Color( 0.905882, 0.835294, 0.701961, 1 )
custom_colors/font_color_focus = Color( 0.905882, 0.835294, 0.701961, 1 )
custom_colors/font_color = Color( 0.905882, 0.835294, 0.701961, 1 )
custom_colors/font_color_hover = Color( 0.843137, 0.709804, 0.580392, 1 )
custom_colors/font_color_pressed = Color( 0.678431, 0.466667, 0.341176, 1 )
custom_fonts/font = SubResource( 1 )
enabled_focus_mode = 0
text = "TOYOTO"
flat = true

[node name="ButtonTextur" type="Button" parent="BarUi/TopBar"]
margin_left = 202.0
margin_right = 250.0
margin_bottom = 48.0
focus_mode = 0
custom_styles/hover = ExtResource( 2 )
custom_styles/pressed = ExtResource( 5 )
custom_styles/normal = ExtResource( 2 )
toggle_mode = true
enabled_focus_mode = 0
icon_align = 1

[connection signal="pressed" from="BarUi/TopBar/ButtonTextur" to="." method="_on_MenuBttn_pressed"]
